[project]
name = "fh4-cvi"
version = "0.1.0"
description = "Computer Vision Notebooks - FH Upper Austria"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "opencv-python-headless>=4.8",
    "numpy>=1.24",
    "matplotlib>=3.7",
    "scikit-image>=0.20",
    "jupyter>=1.0",
    "torch>=2.0",
    "torchvision>=0.15",
    "ultralytics>=8.0",
    "scikit-learn>=1.6.1",
]

[tool.uv]
package = false
